Track jar downloads

--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -3,7 +3,8 @@ import PlausibleProvider from "next-plausible";
 
 export default function App({ Component, pageProps }) {
     return (
-        <PlausibleProvider trackOutboundLinks trackFileDownloads domain="skinsrestorer.net">
+        <PlausibleProvider trackOutboundLinks trackFileDownloads scriptProps={{"add-file-types": "jar"}}
+                           domain="skinsrestorer.net">
             <Component {...pageProps} />
         </PlausibleProvider>
     )
