Add more skin info

--- a/pages/docs/features/skin-url.mdx
+++ b/pages/docs/features/skin-url.mdx
@@ -2,6 +2,9 @@ import {Steps} from "nextra-theme-docs";
 
 # Skin URL
 
+SkinsRestorer allows you to use a custom skin by using a URL.
+This way you can use a skin not from another player, but from a URL.
+
 ## Confirm a valid skin
 
 Make sure the URL points to only the valid skin PNG file.
@@ -19,23 +22,26 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
 <Steps>
     ### Download the file
 
+    You need to get a skin file in `.png` format. You can use the skin you created or downloaded from the internet.
+    We have a [skin design](/docs/features/skin-design) guide if you need help with that.
+
     ![Image in download folder](/assets/imgur/download-folder.png)
 
     ### Go to https://imgur.com/upload
 
     Upload the file to **imgur** (see image below)
 
-    ![](/assets/imgur/upload-image.png)
+    ![Dropping skin image into imgur](/assets/imgur/upload-image.png)
 
     ### Getting the url
 
-    The Skin URL MUST END WITH .PNG, so make sure that you have the right url!
+    The Skin URL **__must__** end with `.png`, so make sure that you have the right url!
 
     Below you can see the skin I just uploaded to imgur, now right-click on the image and hit "Copy image url"
 
     It should copy an url like `https://i.imgur.com/abcdefgh.png`
 
-    ![](/assets/imgur/copy-link.png)
+    ![Copy link from uploaded image](/assets/imgur/copy-link.png)
 
-    That's it! you can now set the skin by using your **IMGUR** url!
+    That's it! you can now set the skin by using your **imgur** url!
 </Steps>
