Explain folder structure

--- a/pages/docs/configuration/options.mdx
+++ b/pages/docs/configuration/options.mdx
@@ -21,6 +21,8 @@ but if you need to change the plugin behavior, you're in the right place here.
 
 ## File structure
 
+Below is an example of what the file structure of the SkinsRestorer plugin looks like. Click a folder to expand it.
+
 <FileTree>
     <FileTree.Folder name="plugins" defaultOpen>
         <FileTree.Folder name="SkinsRestorer" defaultOpen>
