--- a/pages/docs/features/skin-design.mdx
+++ b/pages/docs/features/skin-design.mdx
@@ -1,4 +1,4 @@
-# Skin Designs
+# Skin Design
 
 SkinsRestorer allows players and admins to apply custom skins. Skins are basically just `64x64` PNG images stored on the Minecraft CDN and signed via the yggdrasil private key.
 Confused what that means? Don't worry, we got you covered. You don't need to know exactly how it works internally to use it. All you need to know is how to get an arbitrary skin you can use in-game.
