Add generator to main website

--- a/pages/404.mdx
+++ b/pages/404.mdx
@@ -3,27 +3,31 @@ title: "Page not found"
 ---
 
 
-
 import Image from "next/image";
 
-<article
-    className="w-full overflow-x-hidden break-words nextra-content flex min-h-[calc(100vh-var(--nextra-navbar-height))] min-w-0 justify-center pb-8 pr-[calc(env(safe-area-inset-right)-1.5rem)]">
-    <main className="flex w-full my-auto">
-        <div className="flex flex-col m-auto">
-            <h1 className="text-3xl font-bold text-center">
-                404 - Page not found
-            </h1>
-            <div className="mx-4">
-                <Image
-                    src="/nyan-cat.webp"
-                    alt="Nyan Cat"
-                    width={500}
-                    height={500}
-                    className="mt-8 rounded-xl"/>
-            </div>
-            <h1 className="text-2xl font-bold text-center">
-            <i>[go back](./)</i>
-            </h1>
-        </div>
-    </main>
-</article>
+export const RootComponent = () => {
+    return (
+        <article
+            className="w-full overflow-x-hidden break-words nextra-content flex min-h-[calc(100vh-var(--nextra-navbar-height))] min-w-0 justify-center pb-8 pr-[calc(env(safe-area-inset-right)-1.5rem)]">
+            <main className="flex w-full my-auto">
+                <div className="flex flex-col m-auto">
+                    <h1 className="text-3xl font-bold text-center">
+                        404 - Page not found
+                    </h1>
+                    <div className="mx-4">
+                        <Image
+                            src="/nyan-cat.webp"
+                            alt="Nyan Cat"
+                            width={500}
+                            height={500}
+                            className="mt-8 rounded-xl"/>
+                    </div>
+                    <h1 className="text-2xl font-bold text-center">
+                        <i>[go back](./)</i>
+                    </h1>
+                </div>
+            </main>
+        </article>
+    )
+}
+
