--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,11 +1,13 @@
 import '../style.css'
 import PlausibleProvider from "next-plausible";
+import {Toaster} from "../components/ui/sonner";
 
 export default function App({ Component, pageProps }) {
     return (
         <PlausibleProvider trackOutboundLinks trackFileDownloads scriptProps={{"add-file-types": "jar"}}
                            domain="skinsrestorer.net">
             <Component {...pageProps} />
+            <Toaster richColors />
         </PlausibleProvider>
     )
 }
