Fix DiscordSRV example

--- a/pages/docs/integrations/discordsrv.mdx
+++ b/pages/docs/integrations/discordsrv.mdx
@@ -21,7 +21,7 @@ SkinsRestorer skins can be used for DiscordSRV messages using the PlaceholderAPI
     You have to replace it with the following:
 
     ```yaml
-    AvatarUrl: https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png
+    AvatarUrl: https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png#{username}
     ```
 
     ### Reload DiscordSRV
